[gd_scene load_steps=14 format=3 uid="uid://djdlpfcl2pfg7"]

[ext_resource type="PackedScene" uid="uid://7ek31hwf0dn3" path="res://scenes/Level/main_root_scene.tscn" id="1_jpnqj"]
[ext_resource type="Script" path="res://scenes/Level/level_3.gd" id="2_3dxca"]
[ext_resource type="PackedScene" uid="uid://cu6xe5rlnnmx" path="res://scenes/scenario/background.tscn" id="3_n3d0t"]
[ext_resource type="Texture2D" uid="uid://6ul0thss6rtt" path="res://assets/art/background/dark/ground_level15.png" id="4_wocey"]
[ext_resource type="PackedScene" uid="uid://b37fx1mhr2f28" path="res://scenes/player/player.tscn" id="5_nwclq"]
[ext_resource type="PackedScene" uid="uid://c5g2ejkxlsyb5" path="res://scenes/scenario/ground.tscn" id="6_8mlab"]
[ext_resource type="PackedScene" uid="uid://cfofpmfo51iol" path="res://scenes/Enemies/enemy_one.tscn" id="7_lyog6"]
[ext_resource type="PackedScene" uid="uid://lpgbh3a740ln" path="res://scenes/hud/hud.tscn" id="8_bvhom"]
[ext_resource type="PackedScene" uid="uid://beukonk3hblqp" path="res://scenes/hud/hud_gameplay.tscn" id="9_oo7w5"]
[ext_resource type="PackedScene" uid="uid://p8l15kfa73es" path="res://scenes/hud/game_over.tscn" id="10_wyp71"]
[ext_resource type="PackedScene" uid="uid://ly4582spvisp" path="res://scenes/objectives/damage_orbs/Damage_Orbs.tscn" id="11_10bwg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q6480"]
size = Vector2(20, 242.667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d38td"]
size = Vector2(12.6667, 202.667)

[node name="Level3" instance=ExtResource("1_jpnqj")]
script = ExtResource("2_3dxca")

[node name="BackGround" parent="." index="0" instance=ExtResource("3_n3d0t")]
terrain = ExtResource("4_wocey")
level = 3

[node name="Player" parent="." index="1" instance=ExtResource("5_nwclq")]
unique_name_in_owner = true
position = Vector2(80, 528)

[node name="Ground" parent="." index="2" instance=ExtResource("6_8mlab")]

[node name="Camera2D" type="Camera2D" parent="." index="3"]
position = Vector2(576, 324)
scale = Vector2(3, 3)

[node name="FloorBurningPosition" type="Marker2D" parent="Camera2D" index="0"]
unique_name_in_owner = true
position = Vector2(72, 21)
scale = Vector2(0.333333, 0.333333)

[node name="OrbSpawnMarker" type="Marker2D" parent="Camera2D" index="1"]
position = Vector2(216, -25)

[node name="OrbSpawnMarker2" type="Marker2D" parent="Camera2D" index="2"]
position = Vector2(216, 4)

[node name="OrbSpawnMarker3" type="Marker2D" parent="Camera2D" index="3"]
position = Vector2(216, 33)

[node name="OrbSpawnMarker4" type="Marker2D" parent="Camera2D" index="4"]
position = Vector2(216, 63)

[node name="EnemyOne" parent="Camera2D" index="5" instance=ExtResource("7_lyog6")]
position = Vector2(162.667, 30.6667)
scale = Vector2(0.667, 0.667)
level_to_load = "LevelThree"

[node name="Area2D" type="Area2D" parent="Camera2D" index="6"]
collision_layer = 4
collision_mask = 24

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/Area2D" index="0"]
position = Vector2(-213.333, 5.33334)
shape = SubResource("RectangleShape2D_q6480")

[node name="StaticBody2D" type="StaticBody2D" parent="Camera2D" index="7"]
position = Vector2(-192, -100)
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/StaticBody2D" index="0"]
position = Vector2(2.33333, 82.6667)
shape = SubResource("RectangleShape2D_d38td")

[node name="StaticBody2D2" type="StaticBody2D" parent="Camera2D" index="8"]
position = Vector2(104, -100)
collision_layer = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Camera2D/StaticBody2D2" index="0"]
position = Vector2(3.66666, 82.6667)
shape = SubResource("RectangleShape2D_d38td")

[node name="hud" parent="Control" index="0" instance=ExtResource("8_bvhom")]
process_mode = 2
visible = false

[node name="HudGameplay" parent="Control" index="1" instance=ExtResource("9_oo7w5")]
visible = false

[node name="GameOver" parent="Control" index="2" instance=ExtResource("10_wyp71")]
process_mode = 2
visible = false

[node name="Orb_Spawn_TImer" type="Timer" parent="Timers" index="0"]

[node name="DamageOrbs" parent="." index="8" instance=ExtResource("11_10bwg")]
position = Vector2(680, 384)

[connection signal="area_entered" from="Camera2D/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Timers/Orb_Spawn_TImer" to="." method="_on_orb_spawn_t_imer_timeout"]
